--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
 }
 body {
   font-family: "Golos_regular", sans-serif;
+  margin: 0;
 }
 
 a {
@@ -36,74 +37,58 @@ li {
   max-width: 100%;
   margin: 0 auto;
   height: auto;
+  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
 }
 
 .container {
-  width: 1180px;
-  height: auto;
+  width: 1380px;
   margin: 0 auto;
 }
 
 .header {
-  position: relative;
-  display: flex;
-  padding: 52px 42px;
+  display: grid;
+  grid-template-columns: 1fr 5fr 7fr;
+  grid-template-rows: 1fr 8fr;
+  grid-template-areas: "header-logo . header-nav" ". header-text . " " . .  header-circle";
+  min-height: 800px;
   align-items: center;
-  background-color: transparent;
-  justify-content: space-between;
-  z-index: 2;
-}
-.header .header-logo {
-  font-family: "Golos_bold", sans-serif;
-  font-size: 20px;
-  line-height: 26px;
+  grid-column-gap: 20px;
   color: white;
 }
-.header nav {
-  font-weight: 400;
-  font-size: 16px;
+.header-logo {
+  grid-area: header-logo;
+  justify-self: center;
 }
-.header nav ul {
-  margin: 0;
+.header-nav {
+  grid-area: header-nav;
+  justify-self: end;
+  padding-right: 20px;
 }
-.header nav li {
-  margin-left: 18px;
-  display: inline;
+.header-nav__link {
+  margin-left: 20px;
 }
-
-.hero {
-  height: auto;
-  margin-top: -130px;
-  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
+.header-text {
+  grid-area: header-text;
+  align-self: center;
+  padding-top: 138px;
 }
-
-.hero-body {
-  padding-top: 18%;
-  margin-right: auto;
-  padding-left: 10%;
-  padding-bottom: 213px;
-}
-
-.hero-description {
-  width: 466px;
-  height: 325px;
-  font-family: "Golos_bold", sans-serif;
-  color: white;
-}
-.hero-description .hero-description_subtitle {
-  font-family: "Golos_demibold", sans-serif;
-  font-size: 14px;
-}
-.hero-description .hero-description_title {
+.header-title {
   font-size: 70px;
+  font-weight: 700;
+  line-height: 81px;
 }
-.hero-description .hero-description_under {
-  font-family: "Golos", sans-serif;
+.header-subtitle {
   font-size: 20px;
   font-weight: 400;
+  line-height: 23px;
 }
-
-.hero-button {
+.header-circle {
+  grid-area: header-circle;
+  justify-self: end;
+  padding-right: 17%;
+  padding-bottom: 3%;
+}
+.header-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,77 +100,13 @@ li {
   border-radius: 55px;
   border: 0;
 }
-.hero-button img {
+.header-button img {
   margin-right: 10px;
   padding-top: 4px;
 }
-.hero-button span {
-  font-family: "Golos_medium", sans-serif;
-}
-
-.hero-circle {
-  width: 226px;
-  height: auto;
-  position: absolute;
-  top: 59%;
-  left: 74%;
-}
-
-.about {
-  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
-  max-width: 100%;
-  height: 800px;
-}
-
-.about-body_label {
-  color: rgba(255, 255, 255, 0.1);
-  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-  transform: rotate(-90deg);
-}
-
-.about-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 174px;
-}
-
-.about-body_links {
-  font-size: 24px;
-  padding-left: 67px;
-  padding-right: 122px;
-}
-.about-body_links .link {
-  line-height: 113%;
-  transition: 0.3s;
-  opacity: 0.25;
-}
-.about-body_links .link:hover {
-  transform: scale(1.2);
-  opacity: 1;
-}
-
-.about-body_description {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.about-body_description .description-title {
-  color: white;
-  font-size: 56px;
-  font-weight: 400;
-  line-height: 63px;
-  margin-top: -39px;
-}
-
-.description-content img {
-  margin: 0 0 30px 80px;
-}
-.description-content .description-content_subtitle p {
-  font-weight: 300;
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.8);
-  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+.header span {
+  font-size: 14px;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
