--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,6 +21,7 @@
 
 body {
   font-family: 'Golos_regular', sans-serif;
+  margin: 0;
 }
 a {
   color: white;
@@ -40,186 +41,113 @@ li {
   max-width: 100%;
   margin: 0 auto;
   height: auto;
+  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
 }
-
+//
 .container {
-  width: 1180px;
-  height: auto;
+  width: 1380px;
   margin: 0 auto;
 }
-
-
 
 
 //HEADER
 
 
 .header {
-  position: relative;
-  display: flex;
-  padding: 52px 42px;
+  display: grid;
+  grid-template-columns: 1fr 5fr 7fr;
+  grid-template-rows: 1fr 8fr;
+  grid-template-areas:
+          "header-logo . header-nav"
+          ". header-text . "
+          " . .  header-circle";
+  min-height: 800px;
   align-items: center;
-  background-color: transparent;
-  justify-content: space-between;
-  z-index: 2;
-  .header-logo {
-    font-family: 'Golos_bold', sans-serif;
-    font-size: 20px;
-    line-height: 26px;
-    color: white;
-  }
-  nav {
-    font-weight: 400;
-    font-size: 16px;
-    ul {
-      margin: 0;
-    }
-    li {
-      margin-left: 18px;
-      display: inline;
-    }
-  }
-}
+  grid-column-gap: 20px;
 
-
-//HERO
-
-
-.hero {
-  height: auto;
-  margin-top: -130px;
-  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
-}
-
-.hero-body {
-  padding-top: 18%;
-  margin-right: auto;
-  padding-left: 10%;
-  padding-bottom: 213px;
-}
-
-.hero-description {
-  width: 466px;
-  height: 325px;
-  font-family: 'Golos_bold', sans-serif;
   color: white;
-  .hero-description_subtitle {
-    font-family: 'Golos_demibold', sans-serif;
-    font-size: 14px;
+  &-logo {
+    grid-area: header-logo;
+    justify-self: center;
   }
-  .hero-description_title {
+  &-nav {
+    grid-area: header-nav;
+    justify-self: end;
+    padding-right: 20px;
+    &__link {
+      margin-left: 20px;
+    }
+  }
+  &-text {
+    grid-area: header-text;
+    align-self: center;
+    padding-top: 138px;
+  }
+  &-title {
     font-size: 70px;
+    font-weight: 700;
+    line-height: 81px;
   }
-  .hero-description_under {
-    font-family: 'Golos', sans-serif;
+  &-subtitle {
     font-size: 20px;
     font-weight: 400;
+    line-height: 23px;
   }
-}
-
-.hero-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  width: 253px;
-  height: 64px;
-  margin-top: 46px;
-  background-color: #25252C;
-  border-radius: 55px;
-  border: 0;
-  img {
-    margin-right: 10px;
-    padding-top: 4px;
+  &-circle {
+    grid-area: header-circle;
+    justify-self: end;
+    padding-right: 17%;
+    padding-bottom: 3%;
+  }
+  &-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 253px;
+    height: 64px;
+    margin-top: 46px;
+    background-color: #25252C;
+    border-radius: 55px;
+    border: 0;
+    img {
+      margin-right: 10px;
+      padding-top: 4px;
+    }
   }
   span {
-    font-family: 'Golos_medium', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
   }
-}
-.hero-circle {
-  width: 226px;
-  height: auto;
-  position: absolute;
-  //left: 1035px;
-  //top: 551px;
-  top: 59%;
-  left: 74%;
-}
 
-
-
-
-
-//ABOUT
-
-.about {
-  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
-  max-width: 100%;
-  height: 800px;
-}
-
-.about-body_label {
-  color: rgba(255, 255, 255, 0.1);
-
-  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-  -3px 35px 21px rgba(0, 0, 0, 0.05),
-  -1px 16px 16px rgba(0, 0, 0, 0.09),
-  0px 4px 9px rgba(0, 0, 0, 0.1),
-  0px 0px 0px rgba(0, 0, 0, 0.1);
-  transform: rotate(-90deg);
-}
-
-.about-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 174px;
-}
-.about-body_links {
-  font-size: 24px;
-  padding-left: 67px;
-  padding-right: 122px;
-  .link {
-    line-height: 113%;
-    transition: .3s;
-    opacity: 0.25;
-    &:hover {
-      transform: scale(1.2);
-      opacity: 1;
-    }
-  }
+  //position: relative;
+  //display: flex;
+  //padding: 52px 42px;
+  //align-items: center;
+  //background-color: transparent;
+  //justify-content: space-between;
+  //z-index: 2;
+  //.header-logo {
+  //  font-family: 'Golos_bold', sans-serif;
+  //  font-size: 20px;
+  //  line-height: 26px;
+  //  color: white;
+  //}
+  //nav {
+  //  font-weight: 400;
+  //  font-size: 16px;
+  //  ul {
+  //    margin: 0;
+  //  }
+  //  li {
+  //    margin-left: 18px;
+  //    display: inline;
+  //  }
+  //}
 }
 
 
-.about-body_description {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .description-title {
-    color: white;
-    font-size: 56px;
-    font-weight: 400;
-    line-height: 63px;
-    margin-top: -39px;
-  }
-}
-.description-content {
-  img {
-    margin: 0 0 30px 80px;
-  }
-  .description-content_subtitle {
-    p {
-      font-weight: 300;
-      font-size: 16px;
-      color: rgba(255, 255, 255, 0.8);
-      text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-      -3px 35px 21px rgba(0, 0, 0, 0.05),
-      -1px 16px 16px rgba(0, 0, 0, 0.09),
-      0px 4px 9px rgba(0, 0, 0, 0.1),
-      0px 0px 0px rgba(0, 0, 0, 0.1);
-    }
-  }
-}
+
 
 
 
