--- a/styles/style.css
+++ b/styles/style.css
@@ -47,20 +47,22 @@ li {
 
 .header {
   display: grid;
-  grid-template-columns: 1fr 5fr 7fr;
+  grid-template-columns: 1fr 5fr 5fr;
   grid-template-rows: 1fr 8fr;
-  grid-template-areas: "header-logo . header-nav" ". header-text . " " . .  header-circle";
   min-height: 800px;
   align-items: center;
-  grid-column-gap: 20px;
   color: white;
 }
 .header-logo {
   grid-area: header-logo;
   justify-self: center;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 .header-nav {
   grid-area: header-nav;
+  grid-column: 3/4;
+  grid-row: 1/2;
   justify-self: end;
   padding-right: 20px;
 }
@@ -69,8 +71,9 @@ li {
 }
 .header-text {
   grid-area: header-text;
-  align-self: center;
-  padding-top: 138px;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  padding-bottom: 56px;
 }
 .header-title {
   font-size: 70px;
@@ -85,8 +88,11 @@ li {
 .header-circle {
   grid-area: header-circle;
   justify-self: end;
-  padding-right: 17%;
-  padding-bottom: 3%;
+}
+.header-circle img {
+  position: absolute;
+  right: 10%;
+  bottom: -14%;
 }
 .header-button {
   display: flex;
@@ -99,6 +105,10 @@ li {
   background-color: #25252C;
   border-radius: 55px;
   border: 0;
+  transition: 0.3s ease-in-out all;
+}
+.header-button:hover {
+  background-color: #38384e;
 }
 .header-button img {
   margin-right: 10px;
