--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,23 +55,29 @@ li {
 
 .header {
   display: grid;
-  grid-template-columns: 1fr 5fr 7fr;
+  grid-template-columns: 1fr 5fr 5fr;
   grid-template-rows: 1fr 8fr;
-  grid-template-areas:
-          "header-logo . header-nav"
-          ". header-text . "
-          " . .  header-circle";
+  //grid-template-areas:
+  //        "header-logo . header-nav"
+  //        ". header-text . "
+  //        " . .  header-circle";
   min-height: 800px;
   align-items: center;
-  grid-column-gap: 20px;
-
+  //grid-column-gap: 20px;
   color: white;
+  //&-logo, &-nav, &-text {
+  //  position: relative;
+  //}
   &-logo {
     grid-area: header-logo;
     justify-self: center;
+    grid-column: 1 / 2;
+    grid-row: 1/2;
   }
   &-nav {
     grid-area: header-nav;
+    grid-column: 3/4;
+    grid-row: 1/2;
     justify-self: end;
     padding-right: 20px;
     &__link {
@@ -80,8 +86,10 @@ li {
   }
   &-text {
     grid-area: header-text;
-    align-self: center;
-    padding-top: 138px;
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+    //align-self: self-start;
+    padding-bottom: 56px;
   }
   &-title {
     font-size: 70px;
@@ -96,8 +104,14 @@ li {
   &-circle {
     grid-area: header-circle;
     justify-self: end;
-    padding-right: 17%;
-    padding-bottom: 3%;
+    //position: relative;
+    //bottom: 12%;
+    //right: 18%;
+    img{
+      position: absolute;
+      right: 10%;
+      bottom: -14%;
+    }
   }
   &-button {
     display: flex;
@@ -110,6 +124,10 @@ li {
     background-color: #25252C;
     border-radius: 55px;
     border: 0;
+    transition: .3s ease-in-out all;
+    &:hover {
+      background-color: #38384e;
+    }
     img {
       margin-right: 10px;
       padding-top: 4px;
@@ -145,9 +163,6 @@ li {
   //  }
   //}
 }
-
-
-
 
 
 
