--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ li {
   display: grid;
   grid-template-columns: 1fr 5fr 5fr;
   grid-template-rows: 1fr 8fr;
-  min-height: 800px;
+  min-height: 790px;
   align-items: center;
   color: white;
 }
@@ -117,6 +117,66 @@ li {
 .header span {
   font-size: 14px;
   font-weight: 600;
+}
+
+.about {
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+}
+
+.about-body {
+  height: 800px;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
+}
+.about-body__label {
+  align-self: center;
+  width: 60px;
+  padding-top: 84px;
+  transform: rotate(-90deg);
+  color: rgba(255, 255, 255, 0.1);
+  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+.about-body__links {
+  margin: 0 auto;
+  align-self: center;
+}
+.about-body__links .link {
+  transition: 0.3s;
+  font-size: 24px;
+  opacity: 0.25;
+}
+.about-body__links .link:hover {
+  transform: scale(1.2);
+  opacity: 1;
+}
+.about-body__description {
+  display: grid;
+  margin-left: 60px;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 10px;
+}
+
+.description-title {
+  font-size: 56px;
+  margin-top: 231px;
+  margin-bottom: 317px;
+  color: white;
+}
+
+.description-content {
+  display: grid;
+  grid-row-gap: 44px;
+}
+.description-content__video {
+  align-self: end;
+  margin-right: 10px;
+  margin-left: auto;
+}
+.description-content__subtitle p {
+  font-weight: 300;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 /*# sourceMappingURL=style.css.map */
