--- a/styles/style.scss
+++ b/styles/style.scss
@@ -61,13 +61,10 @@ li {
   //        "header-logo . header-nav"
   //        ". header-text . "
   //        " . .  header-circle";
-  min-height: 800px;
+  min-height: 790px;
   align-items: center;
   //grid-column-gap: 20px;
   color: white;
-  //&-logo, &-nav, &-text {
-  //  position: relative;
-  //}
   &-logo {
     grid-area: header-logo;
     justify-self: center;
@@ -104,9 +101,6 @@ li {
   &-circle {
     grid-area: header-circle;
     justify-self: end;
-    //position: relative;
-    //bottom: 12%;
-    //right: 18%;
     img{
       position: absolute;
       right: 10%;
@@ -137,31 +131,77 @@ li {
     font-size: 14px;
     font-weight: 600;
   }
+}
+.about {
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+}
 
-  //position: relative;
-  //display: flex;
-  //padding: 52px 42px;
-  //align-items: center;
-  //background-color: transparent;
-  //justify-content: space-between;
-  //z-index: 2;
-  //.header-logo {
-  //  font-family: 'Golos_bold', sans-serif;
-  //  font-size: 20px;
-  //  line-height: 26px;
-  //  color: white;
-  //}
-  //nav {
-  //  font-weight: 400;
-  //  font-size: 16px;
-  //  ul {
-  //    margin: 0;
-  //  }
-  //  li {
-  //    margin-left: 18px;
-  //    display: inline;
-  //  }
-  //}
+.about-body {
+  height: 800px;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
+  &__label {
+    align-self: center;
+    width: 60px;
+    padding-top: 84px;
+    transform: rotate(-90deg);
+    color: rgba(255, 255, 255, 0.1);
+    text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
+    -3px 35px 21px rgba(0, 0, 0, 0.05),
+    -1px 16px 16px rgba(0, 0, 0, 0.09),
+    0px 4px 9px rgba(0, 0, 0, 0.1),
+    0px 0px 0px rgba(0, 0, 0, 0.1);
+  }
+  &__links{
+    margin: 0 auto;
+    align-self: center;
+    .link {
+      transition: .3s;
+      font-size: 24px;
+      opacity: 0.25;
+      &:hover {
+        transform: scale(1.2);
+        opacity: 1;
+      }
+    }
+  }
+  &__description {
+    display: grid;
+    margin-left: 60px;
+    grid-template-columns: 1fr 3fr;
+    grid-column-gap: 10px;
+  }
+}
+.description {
+  &-title {
+    font-size: 56px;
+    margin-top: 231px;
+    margin-bottom: 317px;
+    color: white;
+    //align-self: center;
+    //margin: 0 auto;
+  }
+}
+.description-content {
+  display: grid;
+  grid-row-gap: 44px;
+  &__video {
+    align-self: end;
+    margin-right: 10px;
+    margin-left: auto;
+  }
+  &__subtitle {
+    p {
+      font-weight: 300;
+      font-size: 16px;
+      color: rgba(255, 255, 255, 0.8);
+      text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
+      -3px 35px 21px rgba(0, 0, 0, 0.05),
+      -1px 16px 16px rgba(0, 0, 0, 0.09),
+      0px 4px 9px rgba(0, 0, 0, 0.1),
+      0px 0px 0px rgba(0, 0, 0, 0.1);
+    }
+  }
 }
 
 
