--- a/styles/style.scss
+++ b/styles/style.scss
@@ -156,6 +156,7 @@ li {
     margin: 0 auto;
     align-self: center;
     .link {
+      line-height: 123%;
       transition: .3s;
       font-size: 24px;
       opacity: 0.25;
