--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@ li {
 .header-circle img {
   position: absolute;
   right: 10%;
-  bottom: -14%;
+  bottom: 13%;
 }
 .header-button {
   display: flex;
@@ -150,11 +150,39 @@ li {
   transform: scale(1.2);
   opacity: 1;
 }
+
+.description-content__author {
+  align-self: center;
+  margin-right: 10px;
+  margin-left: auto;
+}
+
+.about-body__author {
+  display: none;
+  margin-left: 60px;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 10px;
+  transition: 3s ease-in-out;
+}
+
+.about-body__why {
+  display: none;
+  margin-left: 60px;
+  grid-template-columns: 1fr;
+  grid-column-gap: 10px;
+  transition: 3s ease-in-out;
+}
+.about-body__why .description-content__ul li {
+  list-style-type: circle;
+  color: white;
+}
+
 .about-body__description {
   display: grid;
   margin-left: 60px;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 10px;
+  transition: 3s ease-in-out;
 }
 
 .description-title {
@@ -162,6 +190,14 @@ li {
   margin-top: 231px;
   margin-bottom: 317px;
   color: white;
+}
+
+.description-content__why {
+  align-self: center;
+  grid-row-gap: 10px;
+}
+.description-content__why img {
+  padding-left: 20px;
 }
 
 .description-content {
