--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,6 +27,7 @@ a {
   color: white;
   text-decoration: none;
 }
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
@@ -104,7 +105,7 @@ li {
     img{
       position: absolute;
       right: 10%;
-      bottom: -14%;
+      bottom: 13%;
     }
   }
   &-button {
@@ -132,6 +133,7 @@ li {
     font-weight: 600;
   }
 }
+
 .about {
   background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
@@ -166,12 +168,40 @@ li {
       }
     }
   }
-  &__description {
-    display: grid;
-    margin-left: 60px;
-    grid-template-columns: 1fr 3fr;
-    grid-column-gap: 10px;
+}
+.description-content__author {
+  align-self: center;
+  margin-right: 10px;
+  margin-left: auto;
+}
+
+.about-body__author {
+  display: none;
+  margin-left: 60px;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 10px;
+  transition: 3s ease-in-out;
+}
+.about-body__why {
+  display: none;
+  margin-left: 60px;
+  grid-template-columns: 1fr;
+  grid-column-gap: 10px;
+  transition: 3s ease-in-out;
+  .description-content__ul {
+    li {
+      list-style-type: circle;
+      color: white;
+    }
   }
+}
+
+.about-body__description {
+  display: grid;
+  margin-left: 60px;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 10px;
+  transition: 3s ease-in-out;
 }
 .description {
   &-title {
@@ -179,8 +209,13 @@ li {
     margin-top: 231px;
     margin-bottom: 317px;
     color: white;
-    //align-self: center;
-    //margin: 0 auto;
+  }
+}
+.description-content__why{
+  align-self: center;
+  grid-row-gap: 10px;
+  img {
+    padding-left: 20px;
   }
 }
 .description-content {
@@ -204,6 +239,7 @@ li {
     }
   }
 }
+
 
 
 
