--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
 body {
   font-family: "Golos_regular", sans-serif;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -145,8 +146,13 @@ li {
   transition: 0.3s;
   font-size: 24px;
   opacity: 0.25;
+  display: block;
 }
 .about-body__links .link:hover {
+  transform: scale(1.2);
+  opacity: 1;
+}
+.about-body__links .link.active {
   transform: scale(1.2);
   opacity: 1;
 }
@@ -157,31 +163,54 @@ li {
   margin-left: auto;
 }
 
+.description-title__author {
+  align-self: center;
+  font-size: 62px;
+  color: white;
+  font-weight: 700;
+}
 .about-body__author {
   display: none;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out 0.1s forwards;
   margin-left: 60px;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
   grid-column-gap: 10px;
 }
 
 .about-body__why {
   display: none;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out 0.1s forwards;
   margin-left: 60px;
   grid-template-columns: 1fr;
   grid-column-gap: 10px;
 }
 .about-body__why .description-content__ul li {
+  padding-top: 6px;
   list-style-type: circle;
   color: white;
 }
 
 .about-body__description {
+  transition: 0.2s;
   display: grid;
   margin-left: 60px;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 10px;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out 0.1s forwards;
 }
 
+@keyframes fadeout {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .description-title {
   font-size: 56px;
   margin-top: 231px;
