--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,6 +22,7 @@
 body {
   font-family: 'Golos_regular', sans-serif;
   margin: 0;
+  scroll-behavior: smooth;
 }
 a {
   color: white;
@@ -133,6 +134,10 @@ li {
     font-weight: 600;
   }
 }
+//.active {
+//  opacity: 1;
+//  color: white;
+//}
 
 .about {
   background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
@@ -162,7 +167,12 @@ li {
       transition: .3s;
       font-size: 24px;
       opacity: 0.25;
+      display: block;
       &:hover {
+        transform: scale(1.2);
+        opacity: 1;
+      }
+      &.active {
         transform: scale(1.2);
         opacity: 1;
       }
@@ -174,20 +184,35 @@ li {
   margin-right: 10px;
   margin-left: auto;
 }
+.description-title__author {
+  align-self: center;
+  font-size: 62px;
+  color: white;
+  font-weight: 700;
+  p {
+
+  }
+}
 
 .about-body__author {
   display: none;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out .1s forwards;
   margin-left: 60px;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
   grid-column-gap: 10px;
 }
 .about-body__why {
   display: none;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out .1s forwards;
   margin-left: 60px;
   grid-template-columns: 1fr;
   grid-column-gap: 10px;
   .description-content__ul {
     li {
+      padding-top: 6px;
       list-style-type: circle;
       color: white;
     }
@@ -195,11 +220,20 @@ li {
 }
 
 .about-body__description {
+  transition: .2s;
   display: grid;
   margin-left: 60px;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 10px;
+  opacity: 0;
+  animation: fadeout 3s ease-in-out .1s forwards;
 }
+
+@keyframes fadeout {
+  0% { opacity: 0; }
+  100% { opacity: 1;}
+}
+
 .description {
   &-title {
     font-size: 56px;
