--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,13 @@
   font-family: "Golos_medium";
   src: url("fonts/Golos/golos-text_medium.ttf");
 }
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Golos_regular", sans-serif;
   margin: 0;
-  scroll-behavior: smooth;
 }
 
 a {
