--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,6 +26,8 @@ html {
 body {
   font-family: 'Golos_regular', sans-serif;
   margin: 0;
+  font-size: 16px;
+  color: white;
 }
 a {
   color: white;
@@ -44,103 +46,131 @@ li {
 //Styles
 .wrapper {
   max-width: 100%;
-  margin: 0 auto;
-  height: auto;
-  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
+
+
 }
 //
 .container {
-  width: 1380px;
+  max-width: 1400px;
+  padding: 0 40px;
   margin: 0 auto;
 }
 
 
 //HEADER
 
-
 .header {
-  display: grid;
-  grid-template-columns: 1fr 5fr 5fr;
-  grid-template-rows: 1fr 8fr;
-  //grid-template-areas:
-  //        "header-logo . header-nav"
-  //        ". header-text . "
-  //        " . .  header-circle";
-  min-height: 790px;
-  align-items: center;
-  //grid-column-gap: 20px;
-  color: white;
-  &-logo {
-    grid-area: header-logo;
-    justify-self: center;
-    grid-column: 1 / 2;
-    grid-row: 1/2;
-  }
-  &-nav {
-    grid-area: header-nav;
-    grid-column: 3/4;
-    grid-row: 1/2;
-    justify-self: end;
-    padding-right: 20px;
-    &__link {
-      margin-left: 20px;
-    }
-  }
-  &-text {
-    grid-area: header-text;
-    grid-column: 2 / 3;
-    grid-row: 2/3;
-    //align-self: self-start;
-    padding-bottom: 56px;
-  }
-  &-title {
-    font-size: 70px;
-    font-weight: 700;
-    line-height: 81px;
-  }
-  &-subtitle {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23px;
-  }
-  &-circle {
-    grid-area: header-circle;
-    justify-self: end;
-    img{
-      position: absolute;
-      right: 10%;
-      bottom: 13%;
-    }
-  }
-  &-button {
+  background: url("../src/image/background/background.png") 0 0/100% auto no-repeat;
+  min-height: 800px;
+
+  &-top {
     display: flex;
     align-items: center;
-    justify-content: center;
-    color: white;
-    width: 253px;
-    height: 64px;
-    margin-top: 46px;
-    background-color: #25252C;
-    border-radius: 55px;
-    border: 0;
-    transition: .3s ease-in-out all;
-    &:hover {
-      background-color: #38384e;
+    justify-content: space-between;
+    height: 110px;
+    padding: 0 12px;
+
+    &__logo {
+      font-weight: 600;
+      font-size: 20px;
     }
-    img {
-      margin-right: 10px;
-      padding-top: 4px;
+
+    &__nav-link {
+      font-size: 16px;
+      margin-left: 18px;
     }
   }
-  span {
-    font-size: 14px;
-    font-weight: 600;
+
+  &-content {
+    display: flex;
+    height: 690px;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 98px;
+    padding-right: 98px;
+
+    &__text {
+      width: 466px;
+      height: 325px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-bottom: 60px;
+
+      span {
+        font-size: 14px;
+        padding-top: 4px;
+        letter-spacing: 1px;
+      }
+
+      &-title {
+        font-size: 72px;
+        font-weight: 600;
+      }
+
+      &-subtitle {
+        font-size: 20px;
+        font-weight: 400;
+        padding-top: 16px;
+      }
+
+      &-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 253px;
+        height: 64px;
+        margin-top: 46px;
+        background-color: #25252C;
+        border-radius: 55px;
+        border: 0;
+        font-size: 14px;
+        transition: .3s ease-in-out all;
+
+        &:hover {
+          background-color: #38384e;
+        }
+
+        img {
+          margin-right: 10px;
+          padding-top: 4px;
+        }
+      }
+    }
+
+    &__circle {
+      position: relative;
+      margin-top: auto;
+      margin-bottom: 19px;
+
+      &-arrow img {
+        position: absolute;
+        right: 110px;
+        top: 74px;
+        height: 80px;
+        width: 8px;
+      }
+
+      svg {
+        animation: 25s linear 0s normal none infinite running rotation;
+        width: 227px;
+        height: 227px;
+      }
+    }
   }
 }
-//.active {
-//  opacity: 1;
-//  color: white;
-//}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+//ABOUT
 
 .about {
   background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
