--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 @import 'normalize.css';
+@import url("https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Oranienbaum&display=swap");
 @font-face {
   font-family: "Golos_regular";
   src: url("fonts/Golos/golos-text_regular.ttf");
@@ -145,125 +147,73 @@ li {
   }
 }
 .about {
+  display: flex;
+  height: 800px;
+  padding-left: 60px;
+  padding-right: 138px;
   background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
-
-.about-body {
-  height: 800px;
-  display: grid;
-  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
-}
-.about-body__label {
-  align-self: center;
-  width: 60px;
-  padding-top: 84px;
+.about-label {
+  text-align: center;
   transform: rotate(-90deg);
   color: rgba(255, 255, 255, 0.1);
-  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  margin-top: auto;
+  margin-bottom: auto;
 }
-.about-body__links {
-  margin: 0 auto;
-  align-self: center;
+.about-tabs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter", sans-serif;
+  font-size: 24px;
+  margin-right: auto;
+  margin-left: 44px;
 }
-.about-body__links .link {
+.about-tabs__tab {
   line-height: 123%;
   transition: 0.3s;
-  font-size: 24px;
   opacity: 0.25;
-  display: block;
+  padding: 5px;
 }
-.about-body__links .link:hover {
+.about-tabs__tab:hover {
   transform: scale(1.2);
   opacity: 1;
 }
-.about-body__links .link.active {
-  transform: scale(1.2);
+.about-tabs__tab.active {
+  transform: scale(1.3);
   opacity: 1;
 }
-
-.description-content__author {
-  align-self: center;
-  margin-right: 10px;
-  margin-left: auto;
+.about-content {
+  display: flex;
 }
-
-.description-title__author {
-  align-self: center;
-  font-size: 62px;
-  color: white;
-  font-weight: 700;
-}
-.about-body__author {
-  display: none;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out 0.1s forwards;
-  margin-left: 60px;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 10px;
-}
-
-.about-body__why {
-  display: none;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out 0.1s forwards;
-  margin-left: 60px;
-  grid-template-columns: 1fr;
-  grid-column-gap: 10px;
-}
-.about-body__why .description-content__ul li {
-  padding-top: 6px;
-  list-style-type: circle;
-  color: white;
-}
-
-.about-body__description {
-  transition: 0.2s;
-  display: grid;
-  margin-left: 60px;
-  grid-template-columns: 1fr 3fr;
-  grid-column-gap: 10px;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out 0.1s forwards;
-}
-
-@keyframes fadeout {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.description-title {
+.about-content__title {
+  font-family: "Oranienbaum", serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 240px;
   font-size: 56px;
-  margin-top: 231px;
-  margin-bottom: 317px;
-  color: white;
+  font-weight: 400;
+  padding-bottom: 148px;
 }
-
-.description-content__why {
-  align-self: center;
-  grid-row-gap: 10px;
-}
-.description-content__why img {
-  padding-left: 20px;
-}
-
-.description-content {
-  display: grid;
-  grid-row-gap: 44px;
-}
-.description-content__video {
-  align-self: end;
-  margin-right: 10px;
-  margin-left: auto;
-}
-.description-content__subtitle p {
-  font-weight: 300;
+.about-content__description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 33px;
+  gap: 16px;
+  width: 455px;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
-  color: rgba(255, 255, 255, 0.8);
-  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+.about-content__description p {
+  margin: 0;
+  line-height: 114%;
+}
+.about-content__description img {
+  margin-left: auto;
+  padding-bottom: 28px;
 }
 
 /*# sourceMappingURL=style.css.map */
