--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
-
+@import url('https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Oranienbaum&display=swap');
 //Fonts
 
 @font-face {
@@ -173,136 +174,212 @@ li {
 //ABOUT
 
 .about {
-  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
-}
-
-.about-body {
+  display: flex;
   height: 800px;
-  display: grid;
-  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
-  &__label {
-    align-self: center;
-    width: 60px;
-    padding-top: 84px;
+  padding-left: 60px;
+  padding-right: 138px;
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+  &-label {
+    text-align: center;
     transform: rotate(-90deg);
     color: rgba(255, 255, 255, 0.1);
-    text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-    -3px 35px 21px rgba(0, 0, 0, 0.05),
-    -1px 16px 16px rgba(0, 0, 0, 0.09),
-    0px 4px 9px rgba(0, 0, 0, 0.1),
-    0px 0px 0px rgba(0, 0, 0, 0.1);
+    margin-top: auto;
+    margin-bottom: auto;
   }
-  &__links{
-    margin: 0 auto;
-    align-self: center;
-    .link {
+  &-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    margin-right: auto;
+    margin-left: 44px;
+
+    &__tab {
       line-height: 123%;
       transition: .3s;
-      font-size: 24px;
       opacity: 0.25;
-      display: block;
+      padding: 5px;
+
       &:hover {
         transform: scale(1.2);
         opacity: 1;
       }
+
       &.active {
-        transform: scale(1.2);
+        transform: scale(1.3);
         opacity: 1;
       }
     }
   }
-}
-.description-content__author {
-  align-self: center;
-  margin-right: 10px;
-  margin-left: auto;
-}
-.description-title__author {
-  align-self: center;
-  font-size: 62px;
-  color: white;
-  font-weight: 700;
-  p {
-
-  }
-}
-
-.about-body__author {
-  display: none;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out .1s forwards;
-  margin-left: 60px;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 10px;
-}
-.about-body__why {
-  display: none;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out .1s forwards;
-  margin-left: 60px;
-  grid-template-columns: 1fr;
-  grid-column-gap: 10px;
-  .description-content__ul {
-    li {
-      padding-top: 6px;
-      list-style-type: circle;
-      color: white;
+  &-content {
+    display: flex;
+    &__title {
+      font-family: 'Oranienbaum', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 240px;
+      font-size: 56px;
+      font-weight: 400;
+      padding-bottom: 148px;
     }
-  }
-}
-
-.about-body__description {
-  transition: .2s;
-  display: grid;
-  margin-left: 60px;
-  grid-template-columns: 1fr 3fr;
-  grid-column-gap: 10px;
-  opacity: 0;
-  animation: fadeout 3s ease-in-out .1s forwards;
-}
-
-@keyframes fadeout {
-  0% { opacity: 0; }
-  100% { opacity: 1;}
-}
-
-.description {
-  &-title {
-    font-size: 56px;
-    margin-top: 231px;
-    margin-bottom: 317px;
-    color: white;
-  }
-}
-.description-content__why{
-  align-self: center;
-  grid-row-gap: 10px;
-  img {
-    padding-left: 20px;
-  }
-}
-.description-content {
-  display: grid;
-  grid-row-gap: 44px;
-  &__video {
-    align-self: end;
-    margin-right: 10px;
-    margin-left: auto;
-  }
-  &__subtitle {
-    p {
-      font-weight: 300;
+    &__description {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-right: 33px;
+      gap: 16px;
+      width: 455px;
+      font-family: 'Inter', sans-serif;
       font-size: 16px;
-      color: rgba(255, 255, 255, 0.8);
-      text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-      -3px 35px 21px rgba(0, 0, 0, 0.05),
-      -1px 16px 16px rgba(0, 0, 0, 0.09),
-      0px 4px 9px rgba(0, 0, 0, 0.1),
-      0px 0px 0px rgba(0, 0, 0, 0.1);
+      p {
+        margin: 0;
+        line-height: 114%;
+      }
+      img {
+        margin-left: auto;
+        padding-bottom: 28px;
+      }
+
     }
   }
 }
+
+
+//
+//.about {
+//  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+//}
+//
+//.about-body {
+//  height: 800px;
+//  display: grid;
+//  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
+//  &__label {
+//    align-self: center;
+//    width: 60px;
+//    padding-top: 84px;
+//    transform: rotate(-90deg);
+//    color: rgba(255, 255, 255, 0.1);
+//    text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
+//    -3px 35px 21px rgba(0, 0, 0, 0.05),
+//    -1px 16px 16px rgba(0, 0, 0, 0.09),
+//    0px 4px 9px rgba(0, 0, 0, 0.1),
+//    0px 0px 0px rgba(0, 0, 0, 0.1);
+//  }
+//  &__links{
+//    margin: 0 auto;
+//    align-self: center;
+//    .link {
+//      line-height: 123%;
+//      transition: .3s;
+//      font-size: 24px;
+//      opacity: 0.25;
+//      display: block;
+//      &:hover {
+//        transform: scale(1.2);
+//        opacity: 1;
+//      }
+//      &.active {
+//        transform: scale(1.2);
+//        opacity: 1;
+//      }
+//    }
+//  }
+//}
+//.description-content__author {
+//  align-self: center;
+//  margin-right: 10px;
+//  margin-left: auto;
+//}
+//.description-title__author {
+//  align-self: center;
+//  font-size: 62px;
+//  color: white;
+//  font-weight: 700;
+//  p {
+//
+//  }
+//}
+//
+//.about-body__author {
+//  display: none;
+//  opacity: 0;
+//  animation: fadeout 3s ease-in-out .1s forwards;
+//  margin-left: 60px;
+//  grid-template-columns: 1fr 2fr;
+//  grid-template-rows: 1fr;
+//  grid-column-gap: 10px;
+//}
+//.about-body__why {
+//  display: none;
+//  opacity: 0;
+//  animation: fadeout 3s ease-in-out .1s forwards;
+//  margin-left: 60px;
+//  grid-template-columns: 1fr;
+//  grid-column-gap: 10px;
+//  .description-content__ul {
+//    li {
+//      padding-top: 6px;
+//      list-style-type: circle;
+//      color: white;
+//    }
+//  }
+//}
+//
+//.about-body__description {
+//  transition: .2s;
+//  display: grid;
+//  margin-left: 60px;
+//  grid-template-columns: 1fr 3fr;
+//  grid-column-gap: 10px;
+//  opacity: 0;
+//  animation: fadeout 3s ease-in-out .1s forwards;
+//}
+//
+//@keyframes fadeout {
+//  0% { opacity: 0; }
+//  100% { opacity: 1;}
+//}
+//
+//.description {
+//  &-title {
+//    font-size: 56px;
+//    margin-top: 231px;
+//    margin-bottom: 317px;
+//    color: white;
+//  }
+//}
+//.description-content__why{
+//  align-self: center;
+//  grid-row-gap: 10px;
+//  img {
+//    padding-left: 20px;
+//  }
+//}
+//.description-content {
+//  display: grid;
+//  grid-row-gap: 44px;
+//  &__video {
+//    align-self: end;
+//    margin-right: 10px;
+//    margin-left: auto;
+//  }
+//  &__subtitle {
+//    p {
+//      font-weight: 300;
+//      font-size: 16px;
+//      color: rgba(255, 255, 255, 0.8);
+//      text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
+//      -3px 35px 21px rgba(0, 0, 0, 0.05),
+//      -1px 16px 16px rgba(0, 0, 0, 0.09),
+//      0px 4px 9px rgba(0, 0, 0, 0.1),
+//      0px 0px 0px rgba(0, 0, 0, 0.1);
+//    }
+//  }
+//}
 
 
 
