crunch: background about

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@ li {
 
 .wrapper {
   max-width: 100%;
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
 
 .container {
@@ -148,10 +149,11 @@ li {
 }
 .about {
   display: flex;
+  max-width: 1400px;
+  margin: 0 auto;
   height: 800px;
   padding-left: 60px;
   padding-right: 138px;
-  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
 .about-label {
   text-align: center;
