--- a/styles/style.css
+++ b/styles/style.css
@@ -181,14 +181,13 @@ li {
   transform: scale(1.2);
   opacity: 1;
 }
-.about-tabs__tab.active {
-  transform: scale(1.3);
-  opacity: 1;
-}
 .about-content {
+  display: none;
+}
+.about-content.active {
   display: flex;
 }
-.about-content__title {
+.about-content__about-title {
   font-family: "Oranienbaum", serif;
   display: flex;
   align-items: center;
@@ -198,7 +197,7 @@ li {
   font-weight: 400;
   padding-bottom: 148px;
 }
-.about-content__description {
+.about-content__about-description {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -209,13 +208,50 @@ li {
   font-family: "Inter", sans-serif;
   font-size: 16px;
 }
-.about-content__description p {
+.about-content__about-description p {
   margin: 0;
   line-height: 114%;
 }
-.about-content__description img {
+.about-content__about-video {
   margin-left: auto;
   padding-bottom: 28px;
+}
+.about-content__author-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  padding-left: 10px;
+}
+.about-content__author-title {
+  font-family: "Oranienbaum", serif;
+  font-size: 56px;
+  font-weight: 400;
+}
+.about-content__author-photo {
+  width: 290px;
+  height: 380px;
+  padding-top: 172px;
+  padding-bottom: 247px;
+}
+.about-content__why-description {
+  font-family: "Inter", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 650px;
+}
+.about-content__why-description li {
+  color: rgba(255, 255, 255, 0.8);
+  list-style-type: disc;
+  font-size: 16px;
+  font-weight: 300;
+}
+.about-content__why-photo {
+  margin-right: auto;
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
