--- a/styles/style.scss
+++ b/styles/style.scss
@@ -314,7 +314,51 @@ li {
   }
 }
 
+//ADVANTAGES
+.advantages {
+  height: 554px;
+  padding-left: 98px;
+  padding-right: 98px;
+  background: white url("/src/image/advantages/houseBg.png") no-repeat 100% 100%;
 
+  &__title {
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    color: #1F252D;
+    padding-top: 50px;
+    padding-bottom: 55px;
+  }
+  &__items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 18px;
+  }
+  &-item {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    &__image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      border: 1px solid #A0A0A0;
+    }
+    &__description {
+      font-family: 'Inter', sans-serif;
+      font-weight: 300;
+      color: #1F252D;
+      margin-left: 24px;
+
+    }
+  }
+}
 
 
 
