--- a/styles/style.scss
+++ b/styles/style.scss
@@ -321,7 +321,7 @@ li {
   padding-right: 98px;
   background: white url("/src/image/advantages/houseBg.png") no-repeat 100% 100%;
 
-  &__title {
+  &__title, {
     text-align: center;
     font-size: 32px;
     font-weight: 600;
@@ -355,11 +355,74 @@ li {
       font-weight: 300;
       color: #1F252D;
       margin-left: 24px;
-
     }
   }
 }
 
+//PROJECTS
+.projects {
+  height: 780px;
+  background: #FAFAFA;
+  &__title {
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    color: #1F252D;
+    padding-top: 50px;
+    padding-bottom: 55px;
+  }
+}
+.projects-slider__slide{
+  width: 380px;
+  height: 481px;
+  border-radius: 12px;
+  background-color: white;
+}
+.slide-inner {
+  padding: 18px 35px 21px 18px;
+  color: #1F252D;
+  &__title {
+    //text-align: center;
+    font-size: 20px;
+  }
+  //TODO переделать на гриды, выровнять. Убрать марджины у параграфов
+  &__description {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    //width: 156px;
+    &-item {
+      display: flex;
+      align-items: center;
+
+      p {
+        margin-left: 12px;
+      }
+    }
+
+  }
+  //TODO Сделать линию before after
+  &__price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    //border-top: 1px solid #1F252D;
+    p {
+      margin: 0 0 8px;
+    }
+    &-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #1F252D;
+      border-radius: 50%;
+      cursor: pointer;
+      width: 52px;
+      height: 52px;
+    }
+  }
+}
 
 
 
