--- a/styles/style.scss
+++ b/styles/style.scss
@@ -379,24 +379,27 @@ li {
   background-color: white;
 }
 .slide-inner {
-  padding: 18px 35px 21px 18px;
+  padding: 18px 18px 21px 18px;
   color: #1F252D;
   &__title {
     //text-align: center;
     font-size: 20px;
+    margin-bottom: 8px;
   }
-  //TODO переделать на гриды, выровнять. Убрать марджины у параграфов
+
   &__description {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    //width: 156px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     &-item {
       display: flex;
       align-items: center;
-
+      &:nth-child(even){
+        padding-left: 32px;
+      }
       p {
         margin-left: 12px;
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
     }
 
@@ -420,6 +423,10 @@ li {
       cursor: pointer;
       width: 52px;
       height: 52px;
+      transition: all .3s ease-in-out;
+      &:hover {
+        background: #dcd9d9;
+      }
     }
   }
 }
