--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import url("https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Oranienbaum&display=swap");
 @font-face {
   font-family: "Golos_regular";
@@ -312,7 +313,7 @@ li {
 }
 
 .projects {
-  height: 780px;
+  height: 800px;
   background: #FAFAFA;
 }
 .projects__title {
@@ -323,9 +324,22 @@ li {
   padding-top: 50px;
   padding-bottom: 55px;
 }
+.projects-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 283px;
+  height: 64px;
+  margin: 44px auto 60px;
+  background-color: #25252C;
+  border-radius: 55px;
+  border: 0;
+  font-size: 14px;
+  transition: 0.3s ease-in-out all;
+}
 
 .swiper-wrapper {
-  width: 1120px;
+  width: 1400px;
 }
 
 .swiper-button-prev {
@@ -426,6 +440,68 @@ li {
 }
 .slide-inner__price-button:hover {
   background: #dcd9d9;
+}
+
+.building {
+  height: 600px;
+  background: #FAFAFA;
+}
+.building-buttons {
+  padding-top: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 21px;
+}
+.building-buttons__button.active .building-buttons__button-image {
+  background-color: #25252C;
+  box-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1), inset 0px 4px 28px rgba(0, 0, 0, 0.1);
+}
+.building-buttons__button.active p {
+  color: #25252C;
+}
+.building-buttons__button-image {
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid #A0A0A0;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.building-buttons__button-image:hover {
+  background-color: #25252C;
+}
+.building-buttons p {
+  color: #25252C;
+  text-align: center;
+  margin-top: 8px;
+}
+.building-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 54px;
+}
+.building-content__description {
+  color: #020202;
+  width: 455px;
+}
+.building-content__description h2 {
+  font-family: "Oranienbaum", serif;
+  font-size: 56px;
+}
+.building-content__description h4 {
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  font-size: 42px;
+}
+.building-content__description p {
+  color: rgba(2, 2, 2, 0.8);
+  text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 /*# sourceMappingURL=style.css.map */
