--- a/styles/style.scss
+++ b/styles/style.scss
@@ -322,7 +322,7 @@ li {
   height: 566px;
   padding-left: 98px;
   padding-right: 98px;
-  background: white url("/src/image/advantages/houseBg.png") no-repeat 100% 100%;
+  background: #FAFAFA url("/src/image/advantages/houseBg.png") no-repeat 100% 100%;
 
   &__title, {
     text-align: center;
@@ -641,7 +641,6 @@ li {
       display: flex;
       align-items: center;
       justify-content: center;
-
     }
   }
 }
