--- a/styles/style.scss
+++ b/styles/style.scss
@@ -552,7 +552,7 @@ li {
       }
     }
     p {
-      color: #25252C;
+      color: rgba(2, 2, 2, 0.25);
       text-align: center;
       margin-top: 8px;
     }
