--- a/styles/style.scss
+++ b/styles/style.scss
@@ -511,7 +511,7 @@ li {
   }
 }
 //BUILDING
-//TODO Накинуть логики на кнопки
+//TODO Не получается накинуть листенер на всю кнопку :(
 
 //TODO кнопку плэй на видео
 .building {
@@ -651,5 +651,79 @@ li {
     }
   }
 }
+//QUIZ
+.quiz {
+  background-color: #FAFAFA;
+  color: #25252C;
+  font-weight: 600;
+  text-align: center;
+  &__subtitle {
+    font-size: 16px;
+    padding-top: 74px;
+    margin-bottom: 12px;
+  }
+  &__title {
+    font-size: 32px;
+    width: 748px;
+    margin: 0 auto;
+    padding-bottom: 36px;
+  }
+}
+.quiz-calculator {
+  height: 763px;
+  background-color: #1F252D;
+  border-radius: 12px;
+  margin-left: 52px;
+  margin-right: 52px;
+  ul {
+    padding-inline-start: 0;
+  }
+}
+.quiz-questions {
+  color: #FFFFFF;
+  &-item__question {
+    font-size: 24px;
+    font-weight: 60;
+    padding-top: 42px;
+    padding-bottom: 42px;
+  }
+  &-item__answers {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+     input[type=radio] {
+      display: none;
+    }
+  }
+}
+//.quiz-questions-item__answers input[type=radio]{
+//    display: none;
+//}
+.quiz-questions-item__answers label {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  margin-right: 0;
+  line-height: 18px;
+  //user-select: none;
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    border: 6px solid #1E262F;
+    border-radius: 50%;
+    left: 204px;
+    bottom: 34px;
+    background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+  }
+}
 
-
+.quiz-questions-item__answers {
+  input[type=radio]:checked + label:before {
+    background: url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+    border: 6px solid #FFFFFF;
+    border-radius: 50%;
+  }
+}
