--- a/styles/style.scss
+++ b/styles/style.scss
@@ -652,6 +652,7 @@ li {
   }
 }
 //QUIZ
+//TODO Поправить контейнер
 .quiz {
   background-color: #FAFAFA;
   color: #25252C;
@@ -673,8 +674,6 @@ li {
   height: 763px;
   background-color: #1F252D;
   border-radius: 12px;
-  margin-left: 52px;
-  margin-right: 52px;
   ul {
     padding-inline-start: 0;
   }
@@ -688,42 +687,73 @@ li {
     padding-bottom: 42px;
   }
   &-item__answers {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-     input[type=radio] {
+    p {
+      margin-top: -14px;
+      margin-bottom: 23px;
+
+    }
+     .radio {
       display: none;
     }
   }
 }
-//.quiz-questions-item__answers input[type=radio]{
-//    display: none;
-//}
-.quiz-questions-item__answers label {
-  display: inline-block;
-  cursor: pointer;
+.custom-radio__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  margin-right: 0;
-  line-height: 18px;
-  //user-select: none;
-  &:before {
-    content: "";
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    border: 6px solid #1E262F;
-    border-radius: 50%;
-    left: 204px;
-    bottom: 34px;
-    background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
-  }
+  top: -7%;
+  right: 50%;
+  left: 46%;
+  width: 24px;
+  height: 24px;
+  border: 6px solid #1E262F;
+  border-radius: 50%;
+  background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+}
+.custom-radio__button::before {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 6px solid #FFFFFF;
+  background: white url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+  opacity: 0;
+  transition: .3s;
+}
+.radio:checked + .custom-radio__button::before {
+  opacity: 1;
 }
 
-.quiz-questions-item__answers {
-  input[type=radio]:checked + label:before {
-    background: url(/src/image/quiz/checked.svg) 0 0 no-repeat;
-    border: 6px solid #FFFFFF;
-    border-radius: 50%;
-  }
-}
+//.quiz-questions-item__answers label {
+//  display: inline-block;
+//  cursor: pointer;
+//  position: relative;
+//  margin-right: 0;
+//  line-height: 18px;
+//  //user-select: none;
+//  &:before {
+//    content: "";
+//    display: inline-block;
+//    width: 24px;
+//    height: 24px;
+//    position: absolute;
+//    border: 6px solid #1E262F;
+//    border-radius: 50%;
+//    left: 204px;
+//    bottom: 34px;
+//    background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+//  }
+//}
+//
+//.quiz-questions-item__answers {
+//  input[type=radio]:checked + label:before {
+//    background: url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+//    border: 6px solid #FFFFFF;
+//    border-radius: 50%;
+//  }
+//}
