--- a/styles/style.scss
+++ b/styles/style.scss
@@ -742,12 +742,24 @@ li {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    color: #FFFFFF;
     width: 170px;
     height: 52px;
     border-radius: 55px;
     border: 1px solid white;
+    background: inherit;
+    transition: all .3s ease-in-out;
+    &:disabled {
+      color: #706e6e;
+      border: 1px solid #706e6e;
+      img {
+        opacity: 0.25;
+      }
+    }
 
     img {
+      transition: all .3s ease-in-out;
+      opacity: 1;
       padding-left: 10px;
       padding-top: 4px;
     }
