--- a/styles/style.scss
+++ b/styles/style.scss
@@ -888,19 +888,69 @@ li {
   display: flex;
   height: 2px;
   width: 100%;
-}
-
-.quiz-calculator__progress-value {
-  animation: load 3s normal forwards;
-  box-shadow: 0 10px 40px -10px #fff;
-  border-radius: 100px;
-  background: #fff;
-  height: 1px;
-  width: 0;
+  &-value {
+    animation: load 3s normal forwards;
+    box-shadow: 0 10px 40px -10px #fff;
+    border-radius: 100px;
+    background: #fff;
+    height: 1px;
+    width: 0;
+  }
 }
 
 @keyframes load {
   0% { width: 0; }
   100% { width: 14%; }
+}
+
+.quiz-feedback-form {
+  display: none;
+  flex-direction: column;
+  color: #FFFFFF;
+  margin: 0 auto;
+  width: 564px;
+  padding-top: 84px;
+  label {
+    margin-top: -30px;
+  }
+  &__subtitle {
+    letter-spacing: 2px;
+  }
+  &__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 42px;
+    gap: 24px;
+    .form-radio {
+      display: none;
+    }
+  }
+}
+.custom-radio__form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: -59px;
+  left: 0;
+  height: 66px;
+  border: 2px solid #1E262F;
+  border-radius: 50%;
+  &:before {
+    content: '';
+    position: absolute;
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    border: 2px solid #A0A0A0;
+    opacity: 0;
+    transition: .3s;
+
+  }
+}
+
+.form-radio:checked + .custom-radio__form-button::before {
+  opacity: 1;
 }
 
